[package]
name = "depplay-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
tokio-stream = "0.1"
async-openai = { version = "0.33.0", features = ["responses"] }
tower-http = { version = "0.5", features = ["cors"]}
http = "1.4.0"
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18"
time = "0.3"
aws-config = "1"
aws-sdk-dynamodb = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.102"
axum-extra = { version = "0.9.6", features = ["cookie"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
